--- a/assets/style.css
+++ b/assets/style.css
@@ -1,30 +1,32 @@
+header {
+  padding: 1rem 0;
+  justify-content: space-between;
+   }
 
 
-    header {
-        padding: 1rem 0;
-        justify-content: space-between;
-    }
-
-
-    .row {
+.row {
       display: flex;
     }
 
 
-    .container {
+.container {
       width: 900px;
       margin: 0 auto;
       max-width: 100;
     }
 
+    
 
-
+.borderRight {
+  border-right: 1px solid black;
+}    
+    
 
 body {
   display: flex;
   flex-direction: column;
   line-height: 1.3;
-}
+  }
 
 header {
   display: flex;
@@ -33,11 +35,11 @@ header {
   padding: 1%;
   background-color: #13293d;
   color: #fff;
-}
+  }
 
 h1 {
   font-size: 200%;
-}
+  }
 
 
 
@@ -45,14 +47,16 @@ h1 {
   /* display: inline-block; */
   justify-content: end;
   min-width: 300px;
-}
+  }
 
  nav a {
   color: #b9C6ae;
   font-weight: bold;
   text-decoration: none;
-}
+  }
 
 #headerBackground {
-  background-image: url("../photos/universe.jpg");
-}
+  background-image: url("./photos/universe.jpg");
+  display: flex;
+  flex-direction: row-reverse;
+  }
